# libaa

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  README.md
app/: main.cpp  (+9 more)
docs/: CMakeLists.txt
examples/: CMakeLists.txt  audio_effect.cpp  audio_processor.cpp  audio_writer.cpp  features.cpp  graph_test.cpp  load_file.cpp  play_sound.cpp  signal_generator.cpp  stft.cpp  wav_diff.cpp
src/: CMakeLists.txt  aa_version.h.in
src/audio_effect/: CMakeLists.txt  aa_audio_effect_processor.cpp  aa_audio_filter_processor.cpp  aa_biquad_filter.cpp  aa_chorus.cpp  aa_compressor.cpp  aa_delay_effect.cpp  aa_delay_processor_utilities.cpp  aa_distortion.cpp  aa_flanger.cpp  aa_gain_processor.cpp  aa_iir_filter.cpp  aa_robot.cpp  aa_tremolo.cpp  aa_vibrato_effect.cpp
src/audio_generator/: aa_lfo_generator.cpp
src/core/: CMakeLists.txt  aa_audio_block.cpp  aa_audio_processor_parameter.cpp  aa_audio_processor_parameter_float.cpp  aa_audio_processor_parameters.cpp  aa_clip.cpp  aa_clip_factory.cpp  aa_json_utilities.cpp  aa_math_tools.cpp  aa_parameter_change.cpp  aa_parameter_changes.cpp  aa_resource_path_finder.cpp  ae_clip_utilities.cpp
src/dsp/: CMakeLists.txt  aa_audio_filter_utilities.cpp  aa_db_utils.cpp  aa_distance.cpp  aa_dsp_utilities.cpp  aa_dtw.cpp  aa_fft.cpp  aa_level_detector.cpp  aa_lfo.cpp  aa_mfcc.cpp  aa_resampler.cpp  aa_simple_delay.cpp  aa_stft.cpp  aa_window.cpp  aa_yin.cpp
src/fileio/: CMakeLists.txt  aa_aac_audio_format_reader.cpp  aa_audio_file.cpp  aa_audio_format_reader.cpp  aa_dir_libs.cpp  aa_file_input_stream.cpp  aa_file_output_stream.cpp  aa_file_stream.cpp  aa_mp3_audio_format_reader.cpp  aa_mp3_audio_format_writer.cpp  aa_out_file_stream.cpp  aa_wav_audio_format_reader.cpp  aa_wav_audio_format_writer.cpp  aa_wav_decoder.cpp
src/graph/: CMakeLists.txt  aa_audio_connection.cpp  aa_audio_processor_node.cpp  aa_base_node.cpp  aa_graph_builder.cpp  aa_graph_node.cpp  aa_node_factory.cpp  aa_node_serialization_utilities.cpp  aa_node_utilities.cpp  aa_parameter_change_connection.cpp  aa_parameter_change_port.cpp  aa_realtime_graph_render.cpp
src/mir/: CMakeLists.txt  aa_ebur128_utilities.cpp  aa_extractor_base.cpp  aa_fft.cpp  aa_loudness_ebur128_extractor.cpp  aa_magnitude.cpp  aa_max_filter.cpp  aa_mir_algorithm_base.cpp  aa_mir_algorithm_factory.cpp  aa_moving_average.cpp  aa_spectrum.cpp  aa_streaming_max_filter.cpp  aa_streaming_moving_average.cpp  aa_streaming_super_flux_extractor.cpp  aa_streaming_superflux_novelty.cpp  aa_streaming_superflux_peaks.cpp  aa_superflux_novelty.cpp  aa_superflux_peaks.cpp  aa_triangular_bands.cpp  aa_windowing.cpp
src/offline/: aa_time_stretching.cpp
src/processor/: CMakeLists.txt  aa_channel_vocoder_processor.cpp  aa_channel_vocoder_utilities.cpp  aa_compressor_processor.cpp  aa_delay_processor.cpp  aa_delay_processor_utilities.cpp  aa_gain_processor.cpp  aa_iir_filter_processor.cpp  aa_limiter_processor.cpp  aa_loudness_normalization_processor.cpp  aa_pitch_shifter_processor.cpp  aa_processor_factory.cpp  aa_processor_utilities.cpp  aa_resampler_processor.cpp  aa_reverb_tank_processor.cpp  aa_schroeder_reverb_processor.cpp  aa_source_callback_processor.cpp  aa_source_processor.cpp  aa_time_stretching_processor.cpp  aa_vibrato_processor.cpp  aa_vibrato_processor_utilities.cpp  aa_vibrator_processor.cpp  aa_vibrator_processor_utilities.cpp
tests/: CMakeLists.txt  aa_scope_wave_file.cpp  aa_test_helper.cpp  aa_test_helper.h  aa_testing_helper.cpp  aa_testing_helper.h  test_IIR_filters.cpp  test_IIR_filters_coeffs.cpp  test_audio_effect.cpp  test_file_stream.cpp  test_mp3_audio_format_reader.cpp  test_mp3_audio_format_writer.cpp  test_out_file_stream.cpp  test_wav_audio_format_reader.cpp  test_wav_audio_format_writer.cpp
tests/app/: CMakeLists.txt  test_demo_context.cpp  test_demo_pipeline.cpp  test_loop_pipeline.cpp  test_read_wav_value.cpp  test_write_wav_value.cpp
tests/core/: CMakeLists.txt  test_audio_block.cpp  test_audio_buffer.cpp  test_audio_buffer_new.cpp  test_audio_parameters.cpp  test_audio_processor_parameter.cpp  test_clip.cpp  test_clip_factory.cpp  test_clip_utilities.cpp  test_parameter_change_ringbuffer.cpp  test_parameter_changes.cpp  test_resource_path_finder.cpp  test_simple_fifo.cpp
tests/dsp/: CMakeLists.txt  test_IIR_filters_coeffs.cpp  test_biquad_impl.cpp  test_comb_filter.cpp  test_deinterleave_utils.cpp  test_delay_APF.cpp  test_delay_line.cpp  test_delay_line_array.cpp  test_dtw.cpp  test_exponential_smoother.cpp  test_features.cpp  test_fft.cpp  test_iir_filter.cpp  test_level_detector.cpp  test_lfo.cpp  test_lfo_generator.cpp  test_nested_delay_APF.cpp  test_resampler.cpp  test_simple_LPF.cpp  test_simple_delay.cpp  test_two_band_shelving_filter.cpp  test_window.cpp  test_yin.cpp
tests/fileio/: test_aac_audio_format_reader.cpp  test_audio_file.cpp  test_file_stream.cpp  test_mp3_audio_format_reader.cpp  test_mp3_audio_format_writer.cpp  test_out_file_stream.cpp  test_wav_audio_format_reader.cpp  test_wav_audio_format_writer.cpp
tests/graph/: CMakeLists.txt  test_audio_connection.cpp  test_audio_port.cpp  test_connection.cpp  test_graph_builder.cpp  test_graph_node.cpp  test_node_factory.cpp  test_node_serialization_utilities.cpp  test_node_utilities.cpp  test_parameter_change_connection.cpp  test_parameter_change_port.cpp  test_processor_node.cpp  test_realtime_graph_render.cpp
tests/mir/: CMakeLists.txt  test_ebur128_utilities.cpp  test_extractor_base.cpp  test_fft.cpp  test_loudness_ebur128_extractor.cpp  test_magnitude.cpp  test_max_filter.cpp  test_mir_algorithm_base.cpp  test_mir_algorithm_factory.cpp  test_mir_input.cpp  test_mir_output.cpp  test_moving_average.cpp  test_onset_detection_extractor.cpp  test_spectrum.cpp  test_streaming_max_filter.cpp  test_streaming_moving_average.cpp  test_streaming_super_flux_novelty.cpp  test_streaming_super_flux_peaks.cpp  test_superflux_novelty.cpp  test_superflux_peaks.cpp  test_triangular_bands.cpp  test_windowing.cpp
tests/offline/: CMakeLists.txt  test_time_stretching.cpp
tests/processor/: CMakeLists.txt  (+27 more)
(+173 files in other folders)
